syntax = "proto3";

package proto;

message HandshakeRequest {
  // protocol version number
  uint32 version = 1;
  // string form of the recipient address
  string to = 2;
  // unix time
  int64 timestamp = 3;
}

message HandshakeResponse {
  // hash of the ping packet
  bytes req_hash = 1;
}