// Copyright 2021 IOTA Stiftung
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package plugin;

service Plugin {
    rpc Shutdown(ShutdownRequest) returns (ShutdownReply);
    rpc ProcessDummyEvent(stream DummyEvent) returns (ProcessReply);
    rpc ProcessSillyEvent(stream SillyEvent) returns (ProcessReply);
}

message ShutdownRequest {}

message ShutdownReply {}

message DummyEvent {}

message SillyEvent {}

message ProcessReply {}
